@startuml

title __MATERIALS's Class Diagram__\n

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      abstract class AbsMaterial {
          # id : SimpleIntegerProperty
          # head : SimpleStringProperty
          # diameter : SimpleDoubleProperty
          # length : SimpleDoubleProperty
          # remainingLength : SimpleDoubleProperty
          # width : SimpleDoubleProperty
          # remainingWidth : SimpleDoubleProperty
          # thickness : SimpleDoubleProperty
          # remainingThickness : SimpleDoubleProperty
          # type : SimpleStringProperty
          # initialWeight : SimpleDoubleProperty
          # remainingWeight : SimpleDoubleProperty
          # color : SimpleStringProperty
          # qty : SimpleIntegerProperty
          # price : SimpleDoubleProperty
          # priceCm : SimpleDoubleProperty
          # totalPrice : SimpleDoubleProperty
          # piecePrice : SimpleDoubleProperty
          ~ AbsMaterial()
          + getHead()
          + setHead()
          + getHeadProperty()
          + getDiameter()
          + setDiameter()
          + getDiameterProperty()
          + getLength()
          + setLength()
          + getLengthProperty()
          + getRemainingLength()
          + setRemainingLength()
          + getRemainingLengthProperty()
          + getWidth()
          + setWidth()
          + getWidthProperty()
          + getRemainingWidth()
          + setRemainingWidth()
          + getRemainingWidthProperty()
          + getThickness()
          + setThickness()
          + getThicknessProperty()
          + getRemainingThickness()
          + setRemainingThickness()
          + getRemainingThicknessProperty()
          + getType()
          + setType()
          + getTypeProperty()
          + getRemainingWeight()
          + setRemainingWeight()
          + getRemainingWeightProperty()
          + getInitialWeight()
          + setInitialWeight()
          + getInitialWeightProperty()
          + getColor()
          + setColor()
          + getColorProperty()
          + getQty()
          + setQty()
          + getQtyProperty()
          + getPrice()
          + setPrice()
          + getPriceProperty()
          + getTotalPrice()
          + setTotalPrice()
          + getTotalPriceProperty()
          {abstract} + delete()
          {abstract} + add()
          {abstract} + isSimilar()
          + getPriceCm()
          + setPriceCm()
          + priceCmProperty()
          + getDb()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class Cylinder {
          + Cylinder()
          + Cylinder()
          + delete()
          + add()
          + isSimilar()
          + modify()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class FilamentSpool {
          + FilamentSpool()
          + FilamentSpool()
          + delete()
          + add()
          + isSimilar()
          + modify()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class RectangularPiece {
          + RectangularPiece()
          + RectangularPiece()
          + delete()
          + add()
          + isSimilar()
          + modify()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class Screw {
          + Screw()
          + Screw()
          + delete()
          + add()
          + modify()
          + modify()
          + isSimilar()
      }
    }
  }
  

  AbsMaterial o-- DB : db
  Cylinder -up-|> AbsMaterial
  FilamentSpool -up-|> AbsMaterial
  RectangularPiece -up-|> AbsMaterial
  Screw -up-|> AbsMaterial


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
